finish portfolio section

--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,29 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<div class="container py-3" >
+    <h5>Portfolio</h5>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.It is a long established fact that a
+        reader will be distracted by the readable content of a page when looking at its layout.</p>
+    <div class="d-flex justify-content-evenly">
+        <div class="card" style="width: 18rem;">
+            <img src="https://picsum.photos/id/237/700/400" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title" style="color:blue">Project Name</h5>
+                <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="https://picsum.photos/id/237/700/400" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title" style="color:blue">Project Name</h5>
+                <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="https://picsum.photos/id/237/700/400" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title" style="color:blue">Project Name</h5>
+                <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
+    </div>
+</div>
