--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,16 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="container">
+  <div class="row align-items-start p-3">
+    <div class="col-4">
+      <img class="img-fluid rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiT8Zfjn864z5pI8QlxsuUNwMsFfXoCUsO2A&usqp=CAU">
+      
+    </div>
+    <div class="col-8 p-3">
+      <h3>The Second Heading <font color="grey">Is Pretty Cool Too.</font>
+      </h3>
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+        form, by injected humour, or randomised words which don't look even slightly believable.</p>
+    </div>
+  </div>
+</div>
+</div>
