--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,21 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<div class="container">
+  <div class="row align-items-start p-3">
+    <div class="col-8 p-3">
+      <h1>This First Heading <font color="grey">Will Catch Your Eye</font></h1>
+      <p>
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat."
+      </p>
+    </div>
+
+    <div class="col-4">
+      <img
+        class="img-fluid rounded-circle"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxcxiWw8q4-HGQbEKVL2QgnMt9D2R-hclxww&usqp=CAU"
+      />
+    </div>
+  </div>
+</div>
