--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,35 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="container">
+  <h1>Contact</h1>
+  <p>
+    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua."
+  </p>
+  <div class="box bg-secondary p-3 rounded">
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label"
+        >Your E-mail</label
+      >
+      <input
+        type="email"
+        class="form-control"
+        id="exampleFormControlInput1"
+        placeholder="Your email"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label"
+        >Your message</label
+      >
+      <textarea
+        class="form-control"
+        id="exampleFormControlTextarea1"
+        placeholder="Please enter your message here..."
+        rows="3"
+      ></textarea>
+    </div>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+      <button class="btn btn-primary me-md-2" type="button">Submit</button>
+    </div>
+  </div>
+</div>
